tests/baselines/reference/declFileWithExtendsClauseThatHasItsContainerNameConflict.errors.txt
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(1,18): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(1,20): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(6,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(13,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(13,10): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
declFileWithExtendsClauseThatHasItsContainerNameConflict.ts(13,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileWithExtendsClauseThatHasItsContainerNameConflict.ts (8 errors) ====
    declare module A.B.C {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                     ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                       ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class B {
        }
    }
    
    module A.B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class EventManager {
            id: number;
    
        }
    }
    
    module A.B.C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
             ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class ContextMenu extends EventManager {
            name: string;
        }
    }